baml_language/crates/baml_tests/snapshots/comment_in_type/baml_tests__comment_in_type__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.FunctionWithComments$render_prompt(a: string, b: int) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // a // param
    let _2: int // b // param
    let _3: map<string, unknown>

    bb0: {
        _3 = { const "a": copy _1, const "b": copy _2 };
        _0 = call const fn baml.llm.render_prompt(const "FunctionWithComments", copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.FunctionWithComments$build_request(a: string, b: int) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // a // param
    let _2: int // b // param
    let _3: map<string, unknown>

    bb0: {
        _3 = { const "a": copy _1, const "b": copy _2 };
        _0 = call const fn baml.llm.build_request(const "FunctionWithComments", copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.CommentAfterArrow() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: map<void, void>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const fn user.TestClient, const "CommentAfterArrow", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.TestClient$new() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: void
    let _2: map<void, void>
    let _3: map<void, void>
    let _4: map<void, void>

    bb0: {
        _2 = {  };
        _3 = {  };
        _4 = {  };
        _1 = PrimitiveClientOptions { const null, const null, const null, const null, const null, const null, copy _2, copy _3, copy _4 };
        _0 = PrimitiveClient { const "TestClient", const "baml-openai-chat", copy _1 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.CommentAfterArrow$render_prompt() -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.render_prompt(const "CommentAfterArrow", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.CommentAfterArrow$build_request() -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.build_request(const "CommentAfterArrow", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.FunctionWithComments(a: string, b: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // a // param
    let _2: int // b // param
    let _3: map<"a" | "b", string | int>

    bb0: {
        _3 = { const "a": copy _1, const "b": copy _2 };
        _0 = call const fn baml.llm.call_llm_function(const fn user.TestClient, const "FunctionWithComments", copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
