baml_language/crates/baml_tests/snapshots/comment_in_type/baml_tests__comment_in_type__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.TestClient$new() -> ? throws never {
  baml.llm.PrimitiveClient { name: "TestClient", provider: "openai", options: baml.llm.PrimitiveClientOptions { model: null, base_url: null, allowed_role_metadata: null, finish_reason_allow_list: null, finish_reason_deny_list: null, supports_streaming: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, headers: map {  }, query_params: map {  }, request_body: map {  } } } : unknown
}
function user.FunctionWithComments(a: string, b: int) -> string throws never {
  baml.llm.call_llm_function<T>(TestClient, "FunctionWithComments", map { "a": a, "b": b }) : string
}
function user.FunctionWithComments$render_prompt(a: string, b: int) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(TestClient, "FunctionWithComments", map { "a": a, "b": b }) : baml.llm.PromptAst
}
function user.FunctionWithComments$build_request(a: string, b: int) -> baml.http.Request throws never {
  baml.llm.build_request(TestClient, "FunctionWithComments", map { "a": a, "b": b }) : baml.http.Request
}
function user.FunctionWithComments$parse(json: string) -> string throws never {
  baml.llm.parse<T>("FunctionWithComments", json) : string
}
function user.CommentAfterArrow() -> string throws never {
  baml.llm.call_llm_function<T>(TestClient, "CommentAfterArrow", map {  }) : string
}
function user.CommentAfterArrow$render_prompt() -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(TestClient, "CommentAfterArrow", map {  }) : baml.llm.PromptAst
}
function user.CommentAfterArrow$build_request() -> baml.http.Request throws never {
  baml.llm.build_request(TestClient, "CommentAfterArrow", map {  }) : baml.http.Request
}
function user.CommentAfterArrow$parse(json: string) -> string throws never {
  baml.llm.parse<T>("CommentAfterArrow", json) : string
}
