baml_language/crates/baml_tests/snapshots/comment_in_type/baml_tests__comment_in_type__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.TestClient$new() -> ? {
  PrimitiveClient { name: "TestClient", provider: "baml-openai-chat", options: PrimitiveClientOptions { base_url: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, headers: map {  }, query_params: map {  }, request_body: map {  } } } : unknown
}
function user.FunctionWithComments(a: string, b: int) -> string {
  baml.llm.call_llm_function(TestClient, "FunctionWithComments", map { "a": a, "b": b }) : unknown
}
function user.FunctionWithComments$render_prompt(a: string, b: int) -> baml.llm.PromptAst {
  baml.llm.render_prompt("FunctionWithComments", map { "a": a, "b": b }) : baml.llm.PromptAst
}
function user.FunctionWithComments$build_request(a: string, b: int) -> baml.http.Request {
  baml.llm.build_request("FunctionWithComments", map { "a": a, "b": b }) : baml.http.Request
}
function user.CommentAfterArrow() -> string {
  baml.llm.call_llm_function(TestClient, "CommentAfterArrow", map {  }) : unknown
}
function user.CommentAfterArrow$render_prompt() -> baml.llm.PromptAst {
  baml.llm.render_prompt("CommentAfterArrow", map {  }) : baml.llm.PromptAst
}
function user.CommentAfterArrow$build_request() -> baml.http.Request {
  baml.llm.build_request("CommentAfterArrow", map {  }) : baml.http.Request
}
