baml_language/crates/baml_tests/snapshots/comment_in_type/baml_tests__comment_in_type__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call ?
    store_global ?142
    load_const ?
    return
}

function user.CommentAfterArrow() -> string {
    load_global user.TestClient
    load_const "CommentAfterArrow"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.CommentAfterArrow$build_request() -> baml.http.Request {
    load_global user.TestClient
    load_const "CommentAfterArrow"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.CommentAfterArrow$parse(json: string) -> string {
    load_const "CommentAfterArrow"
    load_var json
    call baml.llm.parse
    return
}

function user.CommentAfterArrow$render_prompt() -> baml.llm.PromptAst {
    load_global user.TestClient
    load_const "CommentAfterArrow"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.FunctionWithComments(a: string, b: int) -> string {
    load_global user.TestClient
    load_const "FunctionWithComments"
    load_var a
    load_var b
    load_const "a"
    load_const "b"
    alloc_map 2
    call baml.llm.call_llm_function
    return
}

function user.FunctionWithComments$build_request(a: string, b: int) -> baml.http.Request {
    load_global user.TestClient
    load_const "FunctionWithComments"
    load_var a
    load_var b
    load_const "a"
    load_const "b"
    alloc_map 2
    call baml.llm.build_request
    return
}

function user.FunctionWithComments$parse(json: string) -> string {
    load_const "FunctionWithComments"
    load_var json
    call baml.llm.parse
    return
}

function user.FunctionWithComments$render_prompt(a: string, b: int) -> baml.llm.PromptAst {
    load_global user.TestClient
    load_const "FunctionWithComments"
    load_var a
    load_var b
    load_const "a"
    load_const "b"
    alloc_map 2
    call baml.llm.render_prompt
    return
}

function user.TestClient$new() -> null {
    alloc_instance baml.llm.PrimitiveClient
    load_const "TestClient"
    init_field .name
    load_const "openai"
    init_field .provider
    alloc_instance baml.llm.PrimitiveClientOptions
    load_const null
    init_field .model
    load_const null
    init_field .base_url
    load_const null
    init_field .allowed_role_metadata
    load_const null
    init_field .finish_reason_allow_list
    load_const null
    init_field .finish_reason_deny_list
    load_const null
    init_field .supports_streaming
    load_const null
    init_field .default_role
    load_const null
    init_field .allowed_roles
    load_const null
    init_field .remap_roles
    load_const null
    init_field .api_key
    load_const null
    init_field .provider_options
    load_const null
    init_field .media_url_handler
    alloc_map 0
    init_field .headers
    alloc_map 0
    init_field .query_params
    alloc_map 0
    init_field .request_body
    init_field .options
    return
}
