baml_language/crates/baml_tests/snapshots/comment_in_type/baml_tests__comment_in_type__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call ?
    store_global ?106
    load_const ?
    return
}

function user.CommentAfterArrow() -> string {
    load_global user.TestClient
    load_const "CommentAfterArrow"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.CommentAfterArrow$build_request() -> baml.http.Request {
    load_const "CommentAfterArrow"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.CommentAfterArrow$render_prompt() -> baml.llm.PromptAst {
    load_const "CommentAfterArrow"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.FunctionWithComments(a: string, b: int) -> string {
    load_global user.TestClient
    load_const "FunctionWithComments"
    load_var a
    load_var b
    load_const "a"
    load_const "b"
    alloc_map 2
    call baml.llm.call_llm_function
    return
}

function user.FunctionWithComments$build_request(a: string, b: int) -> baml.http.Request {
    load_const "FunctionWithComments"
    load_var a
    load_var b
    load_const "a"
    load_const "b"
    alloc_map 2
    call baml.llm.build_request
    return
}

function user.FunctionWithComments$render_prompt(a: string, b: int) -> baml.llm.PromptAst {
    load_const "FunctionWithComments"
    load_var a
    load_var b
    load_const "a"
    load_const "b"
    alloc_map 2
    call baml.llm.render_prompt
    return
}

function user.TestClient$new() -> null {
    alloc_instance PrimitiveClient
    copy 0
    load_const "TestClient"
    store_field .name
    copy 0
    load_const "baml-openai-chat"
    store_field .provider
    copy 0
    alloc_instance PrimitiveClientOptions
    copy 0
    load_const null
    store_field .base_url
    copy 0
    load_const null
    store_field .default_role
    copy 0
    load_const null
    store_field .allowed_roles
    copy 0
    load_const null
    store_field .remap_roles
    copy 0
    load_const null
    store_field .api_key
    copy 0
    load_const null
    store_field .provider_options
    copy 0
    alloc_map 0
    store_field .headers
    copy 0
    alloc_map 0
    store_field .query_params
    copy 0
    alloc_map 0
    store_field .request_body
    store_field .options
    return
}
